crates/ty_python_semantic/resources/mdtest/snapshots/instance.md_-_Instance_subscript_-_`__getitem__`_unboun…_(b1b0f9ed2b7302b2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: instance.md - Instance subscript - `__getitem__` unbound
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/instance.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotSubscriptable: ...
2 | 
3 | a = NotSubscriptable()[0]  # error: [not-subscriptable]
```

# Diagnostics

```
error[not-subscriptable]: Cannot subscript object of type `NotSubscriptable` with no `__getitem__` method
 --> src/mdtest_snippet.py:3:5
  |
1 | class NotSubscriptable: ...
2 |
3 | a = NotSubscriptable()[0]  # error: [not-subscriptable]
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `not-subscriptable` is enabled by default

```
